@@ -8,7 +8,6 @@
 package com.powsybl.cgmes.conversion;
 
 import com.google.auto.service.AutoService;
-import com.google.common.collect.ImmutableList;
 import com.google.common.io.ByteStreams;
 import com.powsybl.cgmes.model.CgmesModel;
 import com.powsybl.cgmes.model.CgmesModelFactory;
@@ -17,13 +16,14 @@ import com.powsybl.commons.config.PlatformConfig;
 import com.powsybl.commons.datasource.DataSource;
 import com.powsybl.commons.datasource.GenericReadOnlyDataSource;
 import com.powsybl.commons.datasource.ReadOnlyDataSource;
+import com.powsybl.commons.parameters.Parameter;
+import com.powsybl.commons.parameters.ParameterDefaultValueConfig;
+import com.powsybl.commons.parameters.ParameterScope;
+import com.powsybl.commons.parameters.ParameterType;
 import com.powsybl.commons.util.ServiceLoaderCache;
 import com.powsybl.iidm.network.Importer;
 import com.powsybl.iidm.network.Network;
 import com.powsybl.iidm.network.NetworkFactory;
-import com.powsybl.commons.parameters.Parameter;
-import com.powsybl.commons.parameters.ParameterDefaultValueConfig;
-import com.powsybl.commons.parameters.ParameterType;
 import com.powsybl.triplestore.api.TripleStoreFactory;
 import com.powsybl.triplestore.api.TripleStoreOptions;
 import org.slf4j.Logger;
@@ -60,7 +60,15 @@ public class CgmesImport implements Importer {
                 BOUNDARY_LOCATION,
                 ParameterType.STRING,
                 "The location of boundary files",
-                boundaryPath);
+                boundaryPath,
+                null,
+                ParameterScope.TECHNICAL);
+        postProcessorsParameter = new Parameter(
+                POST_PROCESSORS,
+                ParameterType.STRING_LIST,
+                "Post processors",
+                Collections.emptyList(),
+                postProcessors.stream().map(CgmesImportPostProcessor::getName).collect(Collectors.toList()));
     }
 
     public CgmesImport(PlatformConfig platformConfig) {
@@ -79,6 +87,7 @@ public class CgmesImport implements Importer {
     public List<Parameter> getParameters() {
         List<Parameter> allParams = new ArrayList<>(STATIC_PARAMETERS);
         allParams.add(boundaryLocationParameter);
+        allParams.add(postProcessorsParameter);
         return Collections.unmodifiableList(allParams);
     }
 
@@ -242,7 +251,7 @@ public class CgmesImport implements Importer {
 
     private List<CgmesImportPostProcessor> activatedPostProcessors(Properties p) {
         return Parameter
-                .readStringList(getFormat(), p, POST_PROCESSORS_PARAMETER, defaultValueConfig)
+                .readStringList(getFormat(), p, postProcessorsParameter, defaultValueConfig)
                 .stream()
                 .filter(name -> {
                     boolean found = postProcessors.containsKey(name);
@@ -329,7 +338,9 @@ public class CgmesImport implements Importer {
             ID_MAPPING_FILE_PATH,
             ParameterType.STRING,
             "Path of ID mapping file",
-            null);
+            null,
+            null,
+            ParameterScope.TECHNICAL);
     private static final Parameter ID_MAPPING_FILE_NAMING_STRATEGY_PARAMETER = new Parameter(
             ID_MAPPING_FILE_NAMING_STRATEGY,
             ParameterType.STRING,
@@ -340,16 +351,13 @@ public class CgmesImport implements Importer {
             ParameterType.BOOLEAN,
             "Import control areas",
             Boolean.TRUE);
-    private static final Parameter POST_PROCESSORS_PARAMETER = new Parameter(
-            POST_PROCESSORS,
-            ParameterType.STRING_LIST,
-            "Post processors",
-            Collections.emptyList());
     private static final Parameter POWSYBL_TRIPLESTORE_PARAMETER = new Parameter(
             POWSYBL_TRIPLESTORE,
             ParameterType.STRING,
             "The triplestore used during the import",
-            TripleStoreFactory.defaultImplementation())
+            TripleStoreFactory.defaultImplementation(),
+            null,
+            ParameterScope.TECHNICAL)
             .addAdditionalNames("powsyblTripleStore");
     private static final Parameter PROFILE_FOR_INITIAL_VALUES_SHUNT_SECTIONS_TAP_POSITIONS_PARAMETER = new Parameter(
         PROFILE_FOR_INITIAL_VALUES_SHUNT_SECTIONS_TAP_POSITIONS,
@@ -376,7 +384,7 @@ public class CgmesImport implements Importer {
             SOURCE_FOR_IIDM_ID_MRID,
             List.of(SOURCE_FOR_IIDM_ID_MRID, SOURCE_FOR_IIDM_ID_RDFID));
 
-    private static final List<Parameter> STATIC_PARAMETERS = ImmutableList.of(
+    private static final List<Parameter> STATIC_PARAMETERS = List.of(
             ALLOW_UNSUPPORTED_TAP_CHANGERS_PARAMETER,
             CHANGE_SIGN_FOR_SHUNT_REACTIVE_POWER_FLOW_INITIAL_STATE_PARAMETER,
             CONVERT_BOUNDARY_PARAMETER,
@@ -387,7 +395,6 @@ public class CgmesImport implements Importer {
             ID_MAPPING_FILE_PATH_PARAMETER,
             ID_MAPPING_FILE_NAMING_STRATEGY_PARAMETER,
             IMPORT_CONTROL_AREAS_PARAMETER,
-            POST_PROCESSORS_PARAMETER,
             POWSYBL_TRIPLESTORE_PARAMETER,
             PROFILE_FOR_INITIAL_VALUES_SHUNT_SECTIONS_TAP_POSITIONS_PARAMETER,
             SOURCE_FOR_IIDM_ID_PARAMETER,
@@ -395,6 +402,7 @@ public class CgmesImport implements Importer {
             STORE_CGMES_MODEL_AS_NETWORK_EXTENSION_PARAMETER);
 
     private final Parameter boundaryLocationParameter;
+    private final Parameter postProcessorsParameter;
     private final Map<String, CgmesImportPostProcessor> postProcessors;
     private final ParameterDefaultValueConfig defaultValueConfig;
 
